src/test/deca/codegen/invalid/no-objects/divide_by_zero_mod.res
Erreur : divison par zéro.
